@@ -1,5 +1,6 @@
 rerun = "(There were undefined references|Rerun to get (cross-references|the bars) right)"
 doc   = pgfmanual
+latex = pdfelatex
 
 all: $(doc).pdf
 
@@ -10,8 +11,8 @@ pgfmanual.ind: pgfmanual.idx
 	makeindex $(doc).idx
 
 pgfmanual.pdf: $(doc).tex $(doc).ind 
-	pdfelatex $(doc).tex
-	(egrep -q $(rerun) $(doc).log && pdfelatex $(doc).tex) || true
+	$(latex) $(doc).tex
+	(egrep -q $(rerun) $(doc).log && $(latex) $(doc).tex) || true
 
 clean:
 	rm -f *.aux *.log *.bbl *.blg *.ps *.dvi *.pdf *.toc *.out *.snm
