@@ -1,4 +1,4 @@
-\ProvidesPackageRCS[v\pgfversion] $Header: /cvsroot/pgf/pgf/generic/pgf/libraries/pgflibrarysnakes.code.tex,v 1.5 2005/09/07 09:01:52 tantau Exp $
+\ProvidesPackageRCS[v\pgfversion] $Header: /cvsroot/pgf/pgf/generic/pgf/libraries/pgflibrarysnakes.code.tex,v 1.6 2005/09/07 22:11:17 tantau Exp $
 
 % Copyright 2005 by Till Tantau <tantau@cs.tu-berlin.de>.
 %
@@ -14,6 +14,21 @@
 
 \pgfsnakesegmentlength=10pt
 \pgfsnakesegmentamplitude=2.5pt
+
+
+
+% % snake snake
+% %
+% % This snake produces a hopefully optically pleasing squiggly snake. 
+% %
+% % Parameters: \pgfsnakesegmentamplitude, \pgfsnakesegmentlength
+
+% \pgfdeclaresnake{snake}{initial}
+% {
+%   \state{final}
+%   { \pgfpathlineto{\pgfpoint{\pgfsnakeremainingdistance}{0pt}} }
+% }
+
 
 
 
