@@ -4,6 +4,7 @@
 
 	- Added transparency to PGF (quite nice)...
 	- Fixed problem with \\ in centered text.
+	- Fixed problem with hyperlinks in nodes.
 
 2005-09-08 Till Tantau <tantua@users.sourceforget.net>
 
